--- a/package.json
+++ b/package.json
@@ -8,17 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/eslint-plugin": "^7.25.9",
+    "axios": "^1.7.9",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "glob": "^11.0.0",
+    "lru-cache": "^11.0.2",
+    "mdb-vue-ui-kit": "^6.0.0",
+    "rimraf": "^4.3.1",
+    "vue": "^3.2.13",
+    "vue-router": "^4.5.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
+    "@babel/core": "^7.11.0",
+    "@babel/eslint-parser": "^7.25.9",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-service": "~5.0.4",
+    "eslint": "^8.9.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-mdb5": "~2.1.0"
   },
   "eslintConfig": {
     "root": true,
